removed / at the end of my netlify link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               class="instructions"
               id="user-instructions"
             />
-            <input type="submit" class="submit-button" />
+            <input type="submit" class="submit-button"/>
           </form>
           <div class="hint"></div>
         </div>
@@ -42,7 +42,7 @@
           open-sourced on GitHub</a
         >
         and is
-        <a href="https://668ff7a15ddb590bd8e61584--lutendo-ai-joke-generator.netlify.app/" target="_blank"
+        <a href="https://668ff7a15ddb590bd8e61584--lutendo-ai-joke-generator.netlify.app" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
